# fluentpro_backend

./: .coverage  .coveragerc  .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Backend_Refactoring.md  Backend_Refactoring_File_Path.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  ONBOARDING_PROGRESS_TRACKING.MD  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  PHASE4_COMPLETED.md  README.md  add_test_roles.py  build.sh  clean_and_reindex.py  debug_scoring.py  fix_role_descriptions.py  index_roles_script.py  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  setup_azure_search.py  start.sh  test_api.py  test_api_endpoint.py  test_azure_search.py  test_complete_flow.py  test_endpoint.py  test_enhanced_features.py  test_fixed_partner_tracking.py  test_job_input_debug.py  (+7 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  urls.py
api/common/: async_views.py  base_views.py  compatibility.py  decorators.py  deprecation.py  documentation.py  field_mapping.py  middleware.py  responses.py  schemas.py  sse.py  streaming.py  test_async_service_verification.py  test_async_view.py  test_sse_verification.py  test_streaming_verification.py  url_patterns.py
api/v1/: urls.py
api/v2/: urls.py
api/websocket/: __init__.py  authentication.py  routing.py
application/: __init__.py  container.py  dependencies.py
application/decorators/: __init__.py  audit.py  cache.py  circuit_breaker.py  retry.py  validate.py
application/exceptions/: __init__.py  base_exceptions.py  domain_exceptions.py  infrastructure_exceptions.py
application/middleware/: __init__.py  auth_logging.py  correlation_id.py  logging_middleware.py
authentication/: backends.py  health.py  models.py  serializers.py  urls.py  views.py
authentication/business/: __init__.py  auth_manager.py  role_manager.py  user_manager.py
authentication/models/: __init__.py  user.py
authentication/services/: auth0_service.py  (+5 more)
config/: asgi.py  checks.py  wsgi.py
core/: __init__.py  apps.py  cache.py  decorators.py  exceptions.py  interfaces.py  mixins.py  responses.py  services.py  unit_of_work.py  utils.py  view_base.py
docker/: Dockerfile.dev  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  flower_config.py  start-services.sh  stop-services.sh  verify-setup.py
docs/: troubleshooting.md  use_cases.md
domains/: __init__.py
fluentpro_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
infrastructure/: __init__.py
onboarding/: urls.py  views.py
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/: audit_cross_domain_imports.py  azure_search_management.py  check_domain_structure.py  demo_debugging_tools.py  export_api_docs.py  generate_architecture_diagrams.py  test_debugging_tools.py  test_distributed_locks.py  test_state_recovery.py  validate_imports.py  verify_conversation_state.py  verify_session_store.py
shared/: __init__.py
src/: logging.py  main.py
tests/: __init__.py  conftest.py  example_test.py  test_auth.py  test_role_search_complete.py  test_user_login_flow.py  test_user_signup_flow.py  test_users.py
workers/: __init__.py  celery_app.py  celery_config.py
(+337 files in other folders)
